# rosidl

rosidl_adapter/: package.xml  setup.py
rosidl_adapter/rosidl_adapter/: parser.py
rosidl_adapter/rosidl_adapter/msg/: __init__.py
rosidl_adapter/rosidl_adapter/resource/: struct.idl.em
rosidl_cli/: CMakeLists.txt  package.xml
rosidl_parser/: CMakeLists.txt  package.xml  setup.py
