<?xml version="1.0"?>
<package format="2">
  <name>rosidl_adapter</name>
  <version>0.0.0</version>
  <description>The rosidl_adapter package</description>

  <maintainer email="ana@traclabs.com">Ana C.H.Q.</maintainer>


  <license>BSD</license>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>rosidl_cli</depend>
  
  <buildtool_depend>catkin</buildtool_depend>



</package>
