<?xml version="1.0"?>
<package format="2">
  <name>rosidl_cli</name>
  <version>0.0.0</version>
  <description>The rosidl_cli package</description>

  <maintainer email="ana@traclabs.com">Ana C.H.Q.</maintainer>


  <license>BSD</license>

  <depend>rospy</depend>
  <depend>python3-argcomplete</depend>
  <depend>python3-importlib-metadata</depend>

  
  <buildtool_depend>catkin</buildtool_depend>



</package>
